--- a/style.css
+++ b/style.css
@@ -34,6 +34,28 @@ section {
     height: 45px;
   }
 }
+.assignment-example-button {
+  color: red;
+  font-size: 16px;
+}
+.news-and-events-more {
+  align-self: flex-end;
+  margin-top: 16px;
+  cursor: pointer;
+  color: #000;
+  text-decoration: none;
+  font-size: 14px;
+  transition: color 0.2s ease;
+  display: inline-flex;
+  align-items: center;
+}
+.news-and-events-more:hover {
+  color: #999;
+  text-decoration: none;
+}
+.news-and-events-more > i {
+  margin-left: 16px;
+}
 .card-change {
   overflow: hidden;
   height: auto;
@@ -114,28 +136,6 @@ section {
   .message .explanation-text {
     line-height: 28px;
   }
-}
-.assignment-example-button {
-  color: red;
-  font-size: 16px;
-}
-.news-and-events-more {
-  align-self: flex-end;
-  margin-top: 16px;
-  cursor: pointer;
-  color: #000;
-  text-decoration: none;
-  font-size: 14px;
-  transition: color 0.2s ease;
-  display: inline-flex;
-  align-items: center;
-}
-.news-and-events-more:hover {
-  color: #999;
-  text-decoration: none;
-}
-.news-and-events-more > i {
-  margin-left: 16px;
 }
 .news-and-events-title > h2 {
   display: flex;
@@ -327,6 +327,181 @@ ul.plan:nth-child(even) li:last-child {
 .about .message h2 {
   color: #442606;
 }
+.card-group {
+  display: flex;
+  gap: 24px;
+  padding-bottom: 100px;
+}
+@media screen and (max-width: 768px) {
+  .card-group {
+    flex-flow: column;
+    gap: 0;
+  }
+  .card-group div.card-change {
+    margin-bottom: 40px;
+  }
+}
+.card-group .card-change .card-body-field {
+  flex: 1;
+}
+.card-group .card-change .card-body-field div.card-body-change p {
+  margin-bottom: 0;
+}
+.footer {
+  margin-bottom: 0;
+}
+.footer .contact {
+  background-color: #fff;
+  background-image: url(./img/footer.png);
+  background-repeat: no-repeat;
+  background-size: 150px 25.7px;
+  background-position: top 32px center;
+  padding: 77.7px 0 32px;
+}
+.footer .contact .address p {
+  font-size: 14px;
+  line-height: 28px;
+  text-align: center;
+  margin-bottom: 0;
+}
+.footer .contact .icon-list {
+  text-align: center;
+  margin-top: 20px;
+}
+.footer .contact .icon-list i {
+  margin: 0 7px 0 7px;
+}
+.footer .contact .icon-list i:hover {
+  color: #999;
+}
+.footer .content-list {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  background-color: #f5f5f5;
+  padding: 16px;
+  border-top: 1px solid #999;
+  border-bottom: 1px solid #999;
+}
+.footer .content-list .side {
+  display: grid;
+  gap: 8px;
+}
+.footer .content-list .side p {
+  margin-bottom: 0;
+  width: fit-content;
+}
+.footer .content-list .side p:hover {
+  color: #442606;
+}
+.footer .copyright {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 44px;
+  background-color: #000;
+  color: #fff;
+  font-size: 12px;
+  line-height: 12px;
+}
+@media screen and (min-width: 768px) {
+  .footer .contact {
+    padding: 97.7px 0 52px;
+  }
+  .footer .content-list {
+    display: flex;
+    justify-content: center;
+  }
+  .footer .content-list .side {
+    display: flex;
+  }
+  .footer .content-list .side a::after {
+    content: "|";
+    margin-left: 8px;
+  }
+  .footer .content-list .side:last-child {
+    margin-left: 8px;
+  }
+  .footer .content-list .side:last-child a:last-child::after {
+    content: "";
+  }
+}
+.events {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin-bottom: 35px;
+}
+@media (min-width: 768px) {
+  .events {
+    margin-bottom: 0;
+  }
+}
+.events .event-list {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin-bottom: 14px;
+}
+@media (min-width: 768px) {
+  .events .event-list {
+    margin-bottom: 30px;
+  }
+}
+.events .event-list .event-card > a {
+  height: 80px;
+  display: flex;
+  text-decoration: none;
+}
+.events .event-list .event-card > a .event-thumbnail {
+  display: none;
+  width: 207px;
+  overflow: hidden;
+}
+.events .event-list .event-card > a .event-thumbnail > img {
+  height: 100%;
+  transition: transform 0.5s ease;
+}
+.events .event-list .event-card > a .event-thumbnail:hover > img {
+  transform: scale(1.2);
+}
+.events .event-list .event-card > a .event-caption {
+  width: 100%;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  padding: 10px 20px 16px;
+}
+.events .event-list .event-card > a .event-caption > h3 {
+  color: #000;
+  font-size: 16px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  margin-bottom: 8px;
+  width: 100%;
+}
+.events .event-list .event-card > a .event-caption .posted-at {
+  color: #999;
+  font-size: 12px;
+}
+@media (min-width: 768px) {
+  .events .event-list .event-card > a {
+    height: 134px;
+  }
+  .events .event-list .event-card > a .event-thumbnail {
+    display: block;
+  }
+  .events .event-list .event-card > a .event-caption {
+    width: calc(100% - 207px);
+    padding: 0 24px;
+  }
+}
+.events .event-list .event-card:not(:first-child) > a .event-caption {
+  border-top: none;
+}
 header.navbar {
   background-color: #000;
   display: block;
@@ -499,6 +674,9 @@ header.navbar div#contents ul.navbar-nav li:last-child {
   header.navbar div#contents ul.navbar-nav li a {
     margin: 0;
   }
+  header.navbar div#contents ul.navbar-nav li a:hover {
+    color: #999;
+  }
   header.navbar div#contents ul.navbar-nav li:first-child {
     margin-top: 35px;
   }
@@ -535,181 +713,6 @@ header.navbar div#contents ul.navbar-nav li:last-child {
   header.navbar div#contents ul.navbar-nav li:last-child {
     margin-bottom: 31px;
   }
-}
-.footer {
-  margin-bottom: 0;
-}
-.footer .contact {
-  background-color: #fff;
-  background-image: url(./img/footer.png);
-  background-repeat: no-repeat;
-  background-size: 150px 25.7px;
-  background-position: top 32px center;
-  padding: 77.7px 0 32px;
-}
-.footer .contact .address p {
-  font-size: 14px;
-  line-height: 28px;
-  text-align: center;
-  margin-bottom: 0;
-}
-.footer .contact .icon-list {
-  text-align: center;
-  margin-top: 20px;
-}
-.footer .contact .icon-list i {
-  margin: 0 7px 0 7px;
-}
-.footer .contact .icon-list i:hover {
-  color: #999;
-}
-.footer .content-list {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  background-color: #f5f5f5;
-  padding: 16px;
-  border-top: 1px solid #999;
-  border-bottom: 1px solid #999;
-}
-.footer .content-list .side {
-  display: grid;
-  gap: 8px;
-}
-.footer .content-list .side p {
-  margin-bottom: 0;
-  width: fit-content;
-}
-.footer .content-list .side p:hover {
-  color: #442606;
-}
-.footer .copyright {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 44px;
-  background-color: #000;
-  color: #fff;
-  font-size: 12px;
-  line-height: 12px;
-}
-@media screen and (min-width: 768px) {
-  .footer .contact {
-    padding: 97.7px 0 52px;
-  }
-  .footer .content-list {
-    display: flex;
-    justify-content: center;
-  }
-  .footer .content-list .side {
-    display: flex;
-  }
-  .footer .content-list .side a::after {
-    content: "|";
-    margin-left: 8px;
-  }
-  .footer .content-list .side:last-child {
-    margin-left: 8px;
-  }
-  .footer .content-list .side:last-child a:last-child::after {
-    content: "";
-  }
-}
-.events {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  margin-bottom: 35px;
-}
-@media (min-width: 768px) {
-  .events {
-    margin-bottom: 0;
-  }
-}
-.events .event-list {
-  display: flex;
-  flex-direction: column;
-  align-items: stretch;
-  margin-bottom: 14px;
-}
-@media (min-width: 768px) {
-  .events .event-list {
-    margin-bottom: 30px;
-  }
-}
-.events .event-list .event-card > a {
-  height: 80px;
-  display: flex;
-  text-decoration: none;
-}
-.events .event-list .event-card > a .event-thumbnail {
-  display: none;
-  width: 207px;
-  overflow: hidden;
-}
-.events .event-list .event-card > a .event-thumbnail > img {
-  height: 100%;
-  transition: transform 0.5s ease;
-}
-.events .event-list .event-card > a .event-thumbnail:hover > img {
-  transform: scale(1.2);
-}
-.events .event-list .event-card > a .event-caption {
-  width: 100%;
-  background-color: #fff;
-  border: 1px solid #ddd;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: center;
-  padding: 10px 20px 16px;
-}
-.events .event-list .event-card > a .event-caption > h3 {
-  color: #000;
-  font-size: 16px;
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin-bottom: 8px;
-  width: 100%;
-}
-.events .event-list .event-card > a .event-caption .posted-at {
-  color: #999;
-  font-size: 12px;
-}
-@media (min-width: 768px) {
-  .events .event-list .event-card > a {
-    height: 134px;
-  }
-  .events .event-list .event-card > a .event-thumbnail {
-    display: block;
-  }
-  .events .event-list .event-card > a .event-caption {
-    width: calc(100% - 207px);
-    padding: 0 24px;
-  }
-}
-.events .event-list .event-card:not(:first-child) > a .event-caption {
-  border-top: none;
-}
-.card-group {
-  display: flex;
-  gap: 24px;
-  padding-bottom: 100px;
-}
-@media screen and (max-width: 768px) {
-  .card-group {
-    flex-flow: column;
-    gap: 0;
-  }
-  .card-group div.card-change {
-    margin-bottom: 40px;
-  }
-}
-.card-group .card-change .card-body-field {
-  flex: 1;
-}
-.card-group .card-change .card-body-field div.card-body-change p {
-  margin-bottom: 0;
 }
 .news-contents {
   padding-left: 0;
